--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 input {
   width: 60px;
 }
@@ -12,8 +18,8 @@ input {
   display: flex;
   flex-direction: row;
   border: 2px solid black;
-  height: 1000px;
-  width: 100%;
+  height: 900px;
+  width: 1400px;
 }
 .calculator .plot {
   border: 2px solid black;
@@ -41,35 +47,67 @@ input {
   width: 100%;
 }
 .calculator .options {
-  display: inline-flex;
-  flex-direction: column;
+  display: grid;
   overflow-y: scroll;
   width: 20%;
   border: 2px solid black;
 }
 .calculator .options .battary {
   border: 2px solid #0e91a2;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
 }
-.calculator .options .battary .tick {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+.calculator .options .battary p {
+  grid-column: span 3;
 }
-.calculator .options .battary .tick p {
-  width: 70px;
+.calculator .options .battary input {
+  width: 100%;
 }
-.calculator .options .track {
+.calculator .options .truck {
   border: 2px solid yellowgreen;
-  height: 60%;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+}
+.calculator .options .truck p {
+  grid-column: span 3;
+}
+.calculator .options .truck input {
+  width: 100%;
 }
 .calculator .options .charger {
   border: 2px solid blue;
-  height: 60%;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+}
+.calculator .options .charger p {
+  grid-column: span 3;
+}
+.calculator .options .charger input {
+  width: 100%;
 }
 .calculator .options .time_step {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   border: 2px solid red;
-  height: 60%;
+}
+.calculator .options .time_step p {
+  grid-column: span 3;
+}
+.calculator .options .time_step input {
+  width: 100%;
+}
+.calculator .options .time_step span {
+  display: grid;
+  width: 100%;
+  place-items: center;
+}
+.calculator .options .time_step .plus {
+  grid-row: span 2;
+  place-items: center;
+  height: 100%;
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
