--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,15 +3,23 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 input {
     width: 60px;
 }
+
 .calculator {
     display: flex;
     flex-direction: row;
     border: 2px solid black;
-    height: 1000px;
-    width: 100%;
+    height: 900px;
+    width: 1400px;
 
     .plot {
         border: 2px solid black;
@@ -27,13 +35,15 @@ input {
             border: 2px solid black;
             height: 20%;
             width: 100%;
-            
+
         }
 
         .plot_day {
             border: 2px solid black;
             height: 40%;
             width: 100%;
+
+            
         }
 
         .plot_trende {
@@ -44,39 +54,81 @@ input {
     }
 
     .options {
-        display: inline-flex;
-        flex-direction: column;
+        display: grid;
         overflow-y: scroll;
         width: 20%;
         border: 2px solid black;
 
         .battary {
             border: 2px solid rgb(14, 145, 162);
-            .tick {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                justify-content: space-between;
-                p {
-                    width: 70px;
-                }
+            display: grid;
+            grid-template-columns: 1fr 2fr 1fr;
 
+            p {
+                grid-column: span 3;
+            }
+
+            // span {
+
+            // }
+            input {
+                width: 100%;
             }
         }
-        .track {
-            border: 2px solid yellowgreen;
-            height: 60%;
 
+        .truck {
+            border: 2px solid yellowgreen;
+            display: grid;
+            grid-template-columns: 1fr 2fr 1fr;
+
+            p {
+                grid-column: span 3;
+            }
+
+            input {
+                width: 100%;
+            }
         }
+
         .charger {
             border: 2px solid blue;
-            height: 60%;
+            display: grid;
+            grid-template-columns: 1fr 2fr 1fr;
 
+            p {
+                grid-column: span 3;
+            }
+
+            input {
+                width: 100%;
+            }
         }
-        .time_step {
-            border: 2px solid red;
-            height: 60%;
 
+        .time_step {
+            display: grid;
+
+            grid-template-columns: 1fr 1fr 1fr;
+            border: 2px solid red;
+
+            p {
+                grid-column: span 3;
+            }
+            input {
+                width: 100%;
+            }
+            span {
+                display: grid;
+                width: 100%;
+                place-items: center;
+            }
+            .plus {
+                grid-row: span 2;
+                place-items: center;
+                height: 100%;
+                background: transparent;
+                border: none;
+                cursor: pointer;
+            }
         }
     }
 }
