--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,7 +22,6 @@ input {
   width: 1400px;
 }
 .calculator .plot {
-  border: 2px solid black;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -32,19 +31,34 @@ input {
   display: flex;
   flex-direction: column;
   justify-content: first baseline;
-  border: 2px solid black;
+  border: 2px solid white;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   height: 20%;
-  width: 100%;
+  width: 98%;
+  margin-left: 1%;
+  margin-top: 1.25%;
 }
 .calculator .plot .plot_day {
-  border: 2px solid black;
+  border: 2px solid white;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   height: 40%;
-  width: 100%;
+  width: 98%;
+  margin-left: 1%;
+  margin-top: 1.25%;
 }
 .calculator .plot .plot_trende {
-  border: 2px solid black;
+  border: 2px solid white;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   height: 40%;
-  width: 100%;
+  width: 98%;
+  margin-left: 1%;
+  margin-top: 1.25%;
 }
 .calculator .options {
   display: flex;
@@ -127,6 +141,7 @@ input {
 }
 .calculator .options .time_step {
   position: relative;
+  flex-grow: 1;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   place-items: center;
@@ -138,6 +153,10 @@ input {
   width: 90%;
   margin-left: 5%;
   margin-top: 5%;
+}
+.calculator .options .time_step p {
+  max-height: 50px;
+  min-height: 50px;
 }
 .calculator .options .time_step span {
   display: grid;
@@ -154,6 +173,7 @@ input {
 }
 .calculator .options .time_step .stash {
   display: grid;
+  overflow-y: scroll;
   grid-column: span 3;
   width: 100%;
 }
@@ -166,7 +186,18 @@ input {
 }
 .calculator .options .equel {
   position: relative;
-  bottom: 0;
+  min-height: 30px;
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 5%;
+  padding: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  cursor: pointer;
+  user-select: none;
+}
+.calculator .options .equel:hover {
+  border: 1px solid #53c0ff;
 }
 
 /*# sourceMappingURL=style.css.map */
