--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,7 +22,6 @@ input {
     width: 1400px;
 
     .plot {
-        border: 2px solid black;
         display: flex;
         flex-direction: column;
         height: 100%;
@@ -32,24 +31,39 @@ input {
             display: flex;
             flex-direction: column;
             justify-content: first baseline;
-            border: 2px solid black;
+            border: 2px solid white;
+            border-radius: 5px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             height: 20%;
-            width: 100%;
+            width: 98%;
+            margin-left: 1%;
+            margin-top: 1.25%;
 
         }
 
         .plot_day {
-            border: 2px solid black;
+            border: 2px solid white;
+            border-radius: 5px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             height: 40%;
-            width: 100%;
+            width: 98%;
+            margin-left: 1%;
+            margin-top: 1.25%;
 
 
         }
 
         .plot_trende {
-            border: 2px solid black;
+            border: 2px solid white;
+            border-radius: 5px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             height: 40%;
-            width: 100%;
+            width: 98%;
+            margin-left: 1%;
+            margin-top: 1.25%;
         }
     }
 
@@ -148,6 +162,7 @@ input {
 
         .time_step {
             position: relative;
+            flex-grow: 1;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             place-items: center;
@@ -159,6 +174,11 @@ input {
             width: 90%;
             margin-left: 5%;
             margin-top: 5%;
+
+            p {
+                max-height: 50px;
+                min-height: 50px;
+            }
 
             span {
                 display: grid;
@@ -177,7 +197,7 @@ input {
 
             .stash {
                 display: grid;
-                // overflow-y: scroll;
+                overflow-y: scroll;
                 grid-column: span 3;
                 width: 100%;
 
@@ -194,7 +214,18 @@ input {
 
         .equel {
             position: relative;
-            bottom: 0;
+            min-height: 30px;
+            width: 90%;
+            margin-left: 5%;
+            margin-top: 5%;
+            padding: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
+            cursor: pointer;
+            user-select: none;
+        }
+        .equel:hover {
+            border: 1px solid rgb(83, 192, 255);
         }
     }
 }
