--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,6 +65,9 @@ input {
   flex-direction: column;
   width: 20%;
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: be;
 }
 .calculator .options p {
   display: grid;
