--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -159,6 +159,9 @@ input {
 
 
         }
+        display: flex;
+        flex-direction: column;
+        align-items: be;
 
         .time_step {
             position: relative;
