--- a/src/css/style1.css
+++ b/src/css/style1.css
@@ -40,9 +40,28 @@ body {
   height: 250px;
   border: 1px solid blue;
 }
+.container__calc {
+  width: 280px;
+}
 .container__calc .calc {
   display: flex;
   flex-direction: column;
+}
+.container__calc .calc h3 {
+  min-width: 100%;
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.container__calc .calc h4 {
+  position: relative;
+  min-width: 100%;
+  text-align: center;
+}
+.container__calc .calc select {
+  width: 100px;
 }
 .container__calc .calc .battery_stat {
   display: flex;
@@ -50,7 +69,7 @@ body {
 }
 .container__calc .calc .truck_stat {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 .container__calc .calc .charge_stat {
   display: flex;
