--- a/src/css/style1.css
+++ b/src/css/style1.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,10 +6,29 @@
 }
 
 body {
+  font-family: "Poppins", sans-serif;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: black;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .container {
@@ -42,6 +62,8 @@ body {
 }
 .container__calc {
   width: 280px;
+  height: 580px;
+  overflow-y: scroll;
 }
 .container__calc .calc {
   display: flex;
@@ -49,31 +71,109 @@ body {
 }
 .container__calc .calc h3 {
   min-width: 100%;
-  text-align: center;
+  text-align: left;
   font-weight: bold;
   font-size: 20px;
   letter-spacing: 2px;
   text-transform: uppercase;
+  letter-spacing: 0.1px;
 }
 .container__calc .calc h4 {
   position: relative;
   min-width: 100%;
-  text-align: center;
+  text-align: left;
+  padding: 15px 0 5px 3px;
 }
-.container__calc .calc select {
-  width: 100px;
+.container__calc .calc span {
+  padding-left: 2px;
+}
+.container__calc .calc select,
+.container__calc .calc input {
+  width: 180px;
+  height: 30px;
+  background-color: #00000050;
+  border-radius: 10px;
+  color: white;
+  padding-left: 5px;
 }
 .container__calc .calc .battery_stat {
   display: flex;
   flex-direction: column;
+  background-color: #1d1c1c;
+  color: white;
+  border-radius: 15px;
+  padding: 15px;
 }
 .container__calc .calc .truck_stat {
+  margin-top: 15px;
   display: flex;
   flex-direction: column;
+  background-color: #1d1c1c;
+  color: white;
+  border-radius: 15px;
+  padding: 15px;
 }
 .container__calc .calc .charge_stat {
+  margin-top: 15px;
   display: flex;
   flex-direction: column;
+  background-color: #1d1c1c;
+  color: white;
+  border-radius: 15px;
+  padding: 15px;
+}
+.container__calc .calc .stop_time {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  background-color: #1d1c1c;
+  color: white;
+  border-radius: 15px;
+  padding: 15px;
+}
+.container__calc .calc .stop_time label {
+  padding-top: 15px;
+}
+.container__calc .calc .stop_time label input {
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 130px;
+}
+.container__calc .calc .stop_time .plus {
+  width: 100%;
+  height: 75px;
+  margin-top: 15px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  user-select: none;
+  background-color: white;
+  color: black;
+  font-weight: 600;
+  transition-duration: 0.5s;
+}
+.container__calc .calc .stop_time .plus:hover {
+  transform: scale(1.1);
+}
+.container__calc .calc .equel {
+  width: 100%;
+  height: 30px;
+  margin-top: 15px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  user-select: none;
+  background-color: white;
+  color: black;
+  font-weight: 600;
+  transition-duration: 0.5s;
+}
+.container__calc .calc .equel:hover {
+  padding-bottom: 3px;
 }
 
 /*# sourceMappingURL=style1.css.map */
