--- a/src/scss/style1.scss
+++ b/src/scss/style1.scss
@@ -4,11 +4,32 @@
     box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 body {
+    font-family: "Poppins", sans-serif;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: black;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    display: none;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 .container {
@@ -45,42 +66,136 @@ body {
     }
 
     &__calc {
+
+
         width: 280px;
+        height: 580px;
+        overflow-y: scroll;
+
         .calc {
+            display: flex;
+            flex-direction: column;
+
             h3 {
                 min-width: 100%;
-                text-align: center;
+                text-align: left;
                 font-weight: bold;
                 font-size: 20px;
                 letter-spacing: 2px;
                 text-transform: uppercase;
+                letter-spacing: 0.1px;
             }
+
             h4 {
                 position: relative;
                 min-width: 100%;
-                text-align: center;
+                text-align: left;
+                padding: 15px 0 5px 3px;
             }
-            select {
-                width: 100px;
+
+            span {
+                padding-left: 2px;
             }
-            
-            display: flex;
-            flex-direction: column;
+
+            select,
+            input {
+                width: 180px;
+                height: 30px;
+                background-color: #00000050;
+                border-radius: 10px;
+                color: white;
+                padding-left: 5px;
+            }
 
             .battery_stat {
+
                 display: flex;
                 flex-direction: column;
+                background-color: #1d1c1c;
+                color: white;
+                border-radius: 15px;
+                padding: 15px;
             }
 
             .truck_stat {
+                margin-top: 15px;
                 display: flex;
                 flex-direction: column;
+                background-color: #1d1c1c;
+                color: white;
+                border-radius: 15px;
+                padding: 15px;
             }
+
             .charge_stat {
+                margin-top: 15px;
                 display: flex;
                 flex-direction: column;
+                background-color: #1d1c1c;
+                color: white;
+                border-radius: 15px;
+                padding: 15px;
+            }
+
+            .stop_time {
+                margin-top: 15px;
+                display: flex;
+                flex-direction: column;
+                background-color: #1d1c1c;
+                color: white;
+                border-radius: 15px;
+                padding: 15px;
+
+                label {
+                    padding-top: 15px;
+
+                    input {
+                        margin-left: 10px;
+                        margin-right: 10px;
+                        width: 130px;
+                    }
+                }
+
+                .plus {
+                    width: 100%;
+                    height: 75px;
+                    margin-top: 15px;
+                    border-radius: 15px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    cursor: pointer;
+                    user-select: none;
+                    background-color: white;
+                    color: black;
+                    font-weight: 600;
+                    transition-duration: 0.5s;
+
+                    &:hover {
+                        transform: scale(1.1);
+                    }
+                }
+            }
+
+            .equel {
+                width: 100%;
+                height: 30px;
+                margin-top: 15px;
+                border-radius: 15px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                user-select: none;
+                background-color: white;
+                color: black;
+                font-weight: 600;
+                transition-duration: 0.5s;
+
+                &:hover {
+                    padding-bottom: 3px;
+                }
             }
         }
-
     }
 }
