--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,231 +4,198 @@
     box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 body {
+    font-family: "Poppins", sans-serif;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: sans-serif;
+    background-color: black;
 }
 
-input {
-    width: 60px;
+::-webkit-scrollbar {
+    width: 8px;
 }
 
-.calculator {
+::-webkit-scrollbar-track {
+    display: none;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.container {
     display: flex;
-    flex-direction: row;
-    height: 800px;
-    width: 1400px;
+    width: 980px;
+    border: 1px solid red;
 
-    .plot {
+    &__plot {
         display: flex;
         flex-direction: column;
-        height: 100%;
-        width: 80%;
+        width: 700px;
+        border: 1px solid green;
 
-        .parametr {
+        .result {
             display: flex;
-            flex-direction: column;
-            justify-content: first baseline;
-            border: 2px solid white;
-            border-radius: 5px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            height: 20%;
-            width: 98%;
-            margin-left: 1%;
-            margin-top: 1.25%;
-
+            width: 100%;
+            height: 80px;
+            border: 1px solid black;
         }
 
         .plot_day {
-            border: 2px solid white;
-            border-radius: 5px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            height: 40%;
-            width: 98%;
-            margin-left: 1%;
-            margin-top: 1.25%;
-
-
+            display: flex;
+            width: 100%;
+            height: 250px;
+            border: 1px solid blue;
         }
 
-        .plot_trende {
-            border: 2px solid white;
-            border-radius: 5px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            height: 40%;
-            width: 98%;
-            margin-left: 1%;
-            margin-top: 1.25%;
+        .plot_trande {
+            display: flex;
+            width: 100%;
+            height: 250px;
+            border: 1px solid blue;
         }
     }
 
-    .options {
-        display: flex;
-        flex-direction: column;
-        // overflow-y: scroll;
-        width: 20%;
-        background-color: rgb(255, 255, 255);
-
-        // color: white;
-        p {
-            display: grid;
-            grid-column: span 3;
-            place-items: center;
-            font-size: 16px;
-            font-weight: bold;
-            height: 30px;
-            min-width: 50px;
-        }
-
-        input {
-            width: 90%;
-            height: 30px;
-            text-align: end;
-            font-size: 16px;
-            font-family: sans-serif;
-            border: 1px solid white;
-            background: transparent;
-            box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-        }
-
-        input:focus,
-        :hover,
-        :active {
-            outline: 0;
-            outline-offset: 0;
-        }
-
-        .name_tick {
-            width: 65px;
-        }
-
-        .battary {
-            position: relative;
-            display: grid;
-            grid-template-columns: 1fr 3fr 1fr;
-            place-items: center;
-            border: 2px solid white;
-            border-radius: 5px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            min-height: 200px;
-            width: 90%;
-            margin-left: 5%;
-            margin-top: 5%;
-            padding: 5px;
+    &__calc {
 
 
-        }
+        width: 280px;
+        height: 580px;
+        overflow-y: scroll;
 
-        .truck {
-            position: relative;
-            display: grid;
-            grid-template-columns: 1fr 3fr 1fr;
-            place-items: center;
-            border: 2px solid white;
-            border-radius: 5px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            min-height: 100px;
-            width: 90%;
-            margin-left: 5%;
-            margin-top: 5%;
-            padding: 5px;
+        .calc {
+            display: flex;
+            flex-direction: column;
 
-        }
+            h3 {
+                min-width: 100%;
+                text-align: left;
+                font-weight: bold;
+                font-size: 20px;
+                letter-spacing: 2px;
+                text-transform: uppercase;
+                letter-spacing: 0.1px;
+            }
 
-        .charger {
-            position: relative;
-            display: grid;
-            grid-template-columns: 1fr 3fr 1fr;
-            place-items: center;
-            border: 2px solid white;
-            border-radius: 5px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            min-height: 150px;
-            width: 90%;
-            margin-left: 5%;
-            margin-top: 5%;
-            padding: 5px;
-
-
-        }
-        display: flex;
-        flex-direction: column;
-        align-items: be;
-
-        .time_step {
-            position: relative;
-            flex-grow: 1;
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            place-items: center;
-            border: 2px solid white;
-            border-radius: 5px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            min-height: 150px;
-            width: 90%;
-            margin-left: 5%;
-            margin-top: 5%;
-
-            p {
-                max-height: 50px;
-                min-height: 50px;
+            h4 {
+                position: relative;
+                min-width: 100%;
+                text-align: left;
+                padding: 15px 0 5px 3px;
             }
 
             span {
-                display: grid;
-                width: 100%;
-                place-items: center;
+                padding-left: 2px;
             }
 
-            .plus {
-                grid-row: span 2;
-                place-items: center;
-                height: 100%;
-                background: transparent;
-                border: none;
-                cursor: pointer;
+            select,
+            input {
+                width: 180px;
+                height: 30px;
+                background-color: #00000050;
+                border-radius: 10px;
+                color: white;
+                padding-left: 5px;
             }
 
-            .stash {
-                display: grid;
-                overflow-y: scroll;
-                grid-column: span 3;
-                width: 100%;
+            .battery_stat {
 
-                .post {
-                    grid-column: span 2;
+                display: flex;
+                flex-direction: column;
+                background-color: #1d1c1c;
+                color: white;
+                border-radius: 15px;
+                padding: 15px;
+            }
+
+            .truck_stat {
+                margin-top: 15px;
+                display: flex;
+                flex-direction: column;
+                background-color: #1d1c1c;
+                color: white;
+                border-radius: 15px;
+                padding: 15px;
+            }
+
+            .charge_stat {
+                margin-top: 15px;
+                display: flex;
+                flex-direction: column;
+                background-color: #1d1c1c;
+                color: white;
+                border-radius: 15px;
+                padding: 15px;
+            }
+
+            .stop_time {
+                margin-top: 15px;
+                display: flex;
+                flex-direction: column;
+                background-color: #1d1c1c;
+                color: white;
+                border-radius: 15px;
+                padding: 15px;
+
+                label {
+                    padding-top: 15px;
+
+                    input {
+                        margin-left: 10px;
+                        margin-right: 10px;
+                        width: 130px;
+                    }
                 }
 
-                .del {
+                .plus {
+                    width: 100%;
+                    height: 75px;
+                    margin-top: 15px;
+                    border-radius: 15px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                     cursor: pointer;
                     user-select: none;
+                    background-color: white;
+                    color: black;
+                    font-weight: 600;
+                    transition-duration: 0.5s;
+
+                    &:hover {
+                        transform: scale(1.1);
+                    }
                 }
             }
-        }
 
-        .equel {
-            position: relative;
-            min-height: 30px;
-            width: 90%;
-            margin-left: 5%;
-            margin-top: 5%;
-            padding: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            border-radius: 5px;
-            cursor: pointer;
-            user-select: none;
-        }
-        .equel:hover {
-            border: 1px solid rgb(83, 192, 255);
+            .equel {
+                width: 100%;
+                height: 30px;
+                margin-top: 15px;
+                border-radius: 15px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                user-select: none;
+                background-color: white;
+                color: black;
+                font-weight: 600;
+                transition-duration: 0.5s;
+
+                &:hover {
+                    padding-bottom: 3px;
+                }
+            }
         }
     }
 }
