--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,47 +35,58 @@ body {
 .container {
     display: flex;
     width: 980px;
-    border: 1px solid red;
+    height: 600px;
+
 
     &__plot {
         display: flex;
         flex-direction: column;
-        width: 700px;
-        border: 1px solid green;
+        width: 680px;
 
         .result {
             display: flex;
             width: 100%;
             height: 80px;
-            border: 1px solid black;
+            background-color: #1d1c1c;
+            color: white;
+            border-radius: 15px;
+            // padding: 15px;
         }
 
         .plot_day {
             display: flex;
+            align-items: center;
+            justify-content: center;
             width: 100%;
             height: 250px;
-            border: 1px solid blue;
+            margin-top: 15px;
+            background-color: #1d1c1c;
+            color: white;
+            border-radius: 15px;
+
         }
 
         .plot_trande {
             display: flex;
             width: 100%;
             height: 250px;
-            border: 1px solid blue;
+            margin-top: 15px;
+            background-color: #1d1c1c;
+            color: white;
+            border-radius: 15px;
         }
     }
 
     &__calc {
 
 
-        width: 280px;
-        height: 580px;
+        width: 300px;
         overflow-y: scroll;
 
         .calc {
             display: flex;
             flex-direction: column;
-
+            margin-left: 15px;
             h3 {
                 min-width: 100%;
                 text-align: left;
@@ -115,6 +126,7 @@ body {
                 color: white;
                 border-radius: 15px;
                 padding: 15px;
+                
             }
 
             .truck_stat {
@@ -147,6 +159,10 @@ body {
                 padding: 15px;
 
                 label {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: center;
                     padding-top: 15px;
 
                     input {
@@ -154,6 +170,16 @@ body {
                         margin-right: 10px;
                         width: 130px;
                     }
+                }
+
+                .block_row {
+                    display: flex;
+                    flex-direction: row;
+                }
+
+                .block_column {
+                    display: flex;
+                    flex-direction: column;
                 }
 
                 .plus {
