--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,6 +49,21 @@ body {
   color: white;
   border-radius: 15px;
 }
+.container__plot .result .soc,
+.container__plot .result .work {
+  width: 50%;
+}
+.container__plot .result .soc h4,
+.container__plot .result .work h4 {
+  margin: 15px 0 15px 30px;
+  width: 165px;
+  font-size: 18px;
+}
+.container__plot .result .soc h4 span,
+.container__plot .result .work h4 span {
+  margin-left: 15px;
+  float: right;
+}
 .container__plot .plot_day {
   display: flex;
   align-items: center;
@@ -93,9 +108,6 @@ body {
   text-align: left;
   padding: 15px 0 5px 3px;
 }
-.container__calc .calc span {
-  padding-left: 2px;
-}
 .container__calc .calc select,
 .container__calc .calc input {
   width: 180px;
@@ -104,6 +116,7 @@ body {
   border-radius: 10px;
   color: white;
   padding-left: 5px;
+  cursor: pointer;
 }
 .container__calc .calc .battery_stat {
   display: flex;
@@ -146,11 +159,13 @@ body {
   align-items: center;
   justify-content: center;
   padding-top: 15px;
+  width: 190px;
 }
 .container__calc .calc .stop_time label input {
   margin-left: 10px;
   margin-right: 10px;
   width: 130px;
+  user-select: none;
 }
 .container__calc .calc .stop_time .block_row {
   display: flex;
@@ -164,6 +179,7 @@ body {
   width: 100%;
   height: 75px;
   margin-top: 15px;
+  padding: 0;
   border-radius: 15px;
   display: flex;
   align-items: center;
@@ -172,11 +188,37 @@ body {
   user-select: none;
   background-color: white;
   color: black;
+  font-size: 45px;
   font-weight: 600;
   transition-duration: 0.5s;
 }
 .container__calc .calc .stop_time .plus:hover {
   transform: scale(1.1);
+}
+.container__calc .calc .stop_time .stash .post {
+  padding-left: 2px;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: row;
+}
+.container__calc .calc .stop_time .stash .post .time_step {
+  display: inline-block;
+  width: 188px;
+}
+.container__calc .calc .stop_time .stash .post .del {
+  display: inline-block;
+  width: 57px;
+  height: 18px;
+  border: 1px solid white;
+  text-align: center;
+  border-radius: 15px;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 16px;
+  cursor: pointer;
+  user-select: none;
 }
 .container__calc .calc .equel {
   width: 100%;
