add: block info and bug fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,7 +94,6 @@ body {
   margin-left: 15px;
 }
 .container__calc .calc h3 {
-  min-width: 100%;
   text-align: left;
   font-weight: bold;
   font-size: 20px;
@@ -152,6 +151,36 @@ body {
   color: white;
   border-radius: 15px;
   padding: 15px;
+}
+.container__calc .calc .stop_time .break_info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.container__calc .calc .stop_time .break_info .info_block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 20px;
+  min-height: 20px;
+  background-color: white;
+  border-radius: 50%;
+}
+.container__calc .calc .stop_time .break_info .info_block .info_item {
+  width: 17px;
+  height: 17px;
+}
+.container__calc .calc .stop_time #tooltip {
+  z-index: 9999;
+  position: absolute;
+  display: none;
+  top: 0px;
+  left: 0px;
+  background-color: #fff;
+  padding: 5px 10px 5px 10px;
+  color: #000;
+  font-weight: 500;
+  border-radius: 5px;
 }
 .container__calc .calc .stop_time label {
   display: flex;
