--- a/src/css/style.css
+++ b/src/css/style.css
@@ -111,7 +111,7 @@ body {
 .container__calc .calc input {
   width: 180px;
   height: 30px;
-  background-color: #00000050;
+  background-color: rgba(0, 0, 0, 0.3137254902);
   border-radius: 10px;
   color: white;
   padding-left: 5px;
