--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,15 +65,21 @@ body {
   float: right;
 }
 .container__plot .plot_day {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  max-width: 680px;
+  width: 1000px;
   height: 250px;
   margin-top: 15px;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
+  overflow-x: scroll;
+}
+.container__plot .plot_day .containerPlot {
+  height: 250px;
 }
 .container__plot .plot_trande {
   display: flex;
@@ -111,7 +117,7 @@ body {
 .container__calc .calc input {
   width: 180px;
   height: 30px;
-  background-color: rgba(0, 0, 0, 0.3137254902);
+  background-color: #00000050;
   border-radius: 10px;
   color: white;
   padding-left: 5px;
