--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,8 @@ body {
   align-items: center;
   justify-content: center;
   background-color: black;
+  overflow-y: scroll;
+  margin-top: 50px;
 }
 
 ::-webkit-scrollbar {
@@ -33,71 +35,16 @@ body {
 
 .container {
   display: flex;
-  width: 980px;
-  height: 600px;
-}
-.container__plot {
-  display: flex;
   flex-direction: column;
-  width: 680px;
-}
-.container__plot .result {
-  display: flex;
-  width: 100%;
-  height: 80px;
-  background-color: #1d1c1c;
-  color: white;
-  border-radius: 15px;
-}
-.container__plot .result .soc,
-.container__plot .result .work {
-  width: 50%;
-}
-.container__plot .result .soc h4,
-.container__plot .result .work h4 {
-  margin: 15px 0 15px 30px;
-  width: 165px;
-  font-size: 18px;
-}
-.container__plot .result .soc h4 span,
-.container__plot .result .work h4 span {
-  margin-left: 15px;
-  float: right;
-}
-.container__plot .plot_day {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: 680px;
-  width: 1000px;
-  height: 250px;
-  margin-top: 15px;
-  background-color: #1d1c1c;
-  color: white;
-  border-radius: 15px;
-  overflow-x: scroll;
-}
-.container__plot .plot_day .containerPlot {
-  height: 250px;
-}
-.container__plot .plot_trande {
-  display: flex;
-  width: 100%;
-  height: 250px;
-  margin-top: 15px;
-  background-color: #1d1c1c;
-  color: white;
-  border-radius: 15px;
+  width: 980px;
 }
 .container__calc {
-  width: 300px;
+  width: 100%;
   overflow-y: scroll;
 }
 .container__calc .calc {
   display: flex;
-  flex-direction: column;
-  margin-left: 15px;
+  flex-direction: row;
 }
 .container__calc .calc h3 {
   text-align: left;
@@ -115,48 +62,47 @@ body {
 }
 .container__calc .calc select,
 .container__calc .calc input {
-  width: 180px;
+  width: 100px;
   height: 30px;
   background-color: #00000050;
   border-radius: 10px;
   color: white;
   padding-left: 5px;
-  cursor: pointer;
+  float: left;
 }
 .container__calc .calc .battery_stat {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
-  padding: 15px;
+  padding: 15px 15px 0 15px;
+  min-width: 450px;
 }
-.container__calc .calc .truck_stat {
-  margin-top: 15px;
+.container__calc .calc .battery_stat .point {
   display: flex;
-  flex-direction: column;
-  background-color: #1d1c1c;
-  color: white;
-  border-radius: 15px;
-  padding: 15px;
+  flex-direction: row;
 }
-.container__calc .calc .charge_stat {
-  margin-top: 15px;
+.container__calc .calc .battery_stat .point label span {
   display: flex;
-  flex-direction: column;
-  background-color: #1d1c1c;
-  color: white;
-  border-radius: 15px;
-  padding: 15px;
+  align-items: center;
+  justify-content: center;
+  line-height: 30px;
+  padding: 0 5px 0 5px;
+}
+.container__calc .calc .battery_stat .last_label {
+  margin-bottom: 5px;
 }
 .container__calc .calc .stop_time {
-  margin-top: 15px;
+  margin-left: 15px;
   display: flex;
   flex-direction: column;
   background-color: #1d1c1c;
   color: white;
   border-radius: 15px;
   padding: 15px;
+  min-width: 280px;
 }
 .container__calc .calc .stop_time .break_info {
   display: flex;
@@ -230,7 +176,14 @@ body {
 .container__calc .calc .stop_time .plus:hover {
   transform: scale(1.1);
 }
+.container__calc .calc .stop_time .stash {
+  overflow-y: scroll;
+  max-height: 172px;
+  min-height: 172px;
+  margin-top: 15px;
+}
 .container__calc .calc .stop_time .stash .post {
+  width: 100%;
   padding-left: 2px;
   margin-top: 15px;
   display: flex;
@@ -238,11 +191,11 @@ body {
 }
 .container__calc .calc .stop_time .stash .post .time_step {
   display: inline-block;
-  width: 188px;
+  width: 190px;
 }
 .container__calc .calc .stop_time .stash .post .del {
   display: inline-block;
-  width: 57px;
+  min-width: 60px;
   height: 18px;
   border: 1px solid white;
   text-align: center;
@@ -255,7 +208,27 @@ body {
   cursor: pointer;
   user-select: none;
 }
-.container__calc .calc .equel {
+.container__calc .calc .result {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  background-color: #1d1c1c;
+  color: white;
+  border-radius: 15px;
+  padding: 15px;
+  margin-left: 15px;
+}
+.container__calc .calc .result h4 {
+  padding-bottom: 15px;
+  width: 165px;
+  font-size: 18px;
+}
+.container__calc .calc .result h4 span {
+  margin-left: 15px;
+  float: right;
+}
+.container__calc .calc .result .equel {
   width: 100%;
   height: 30px;
   margin-top: 15px;
@@ -268,10 +241,49 @@ body {
   background-color: white;
   color: black;
   font-weight: 600;
-  transition-duration: 0.5s;
 }
-.container__calc .calc .equel:hover {
-  padding-bottom: 3px;
+@keyframes white_black {
+  from {
+    background-color: white;
+  }
+  to {
+    background-color: black;
+    color: white;
+  }
+}
+.container__calc .calc .result .equel:hover {
+  animation: white_black 0.2s both;
+}
+.container__plot {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.container__plot .plot_day {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 330px;
+  margin-top: 15px;
+  background-color: #1d1c1c;
+  color: white;
+  border-radius: 15px;
+}
+.container__plot .plot_day:focus {
+  overflow: scroll;
+}
+.container__plot .plot_day #myChart {
+  overflow: scroll;
+}
+.container__plot .plot_trande {
+  display: flex;
+  width: 100%;
+  height: 330px;
+  margin-top: 15px;
+  background-color: #1d1c1c;
+  color: white;
+  border-radius: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
